Added GrantAnswers mobile, DBI and WIPCO articles

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -30,6 +30,7 @@
   <a href="../Images/GADesktop.png"><img src="../Images/GADesktop.png"></img></a>
    <a href="../Images/GAMobile.png"><img src="../Images/GAMobile.png"></img></a>
    <a href="../Images/GAad1Student.png"><img src="../Images/GAad1Student.png"></img></a>
+   <a href="../Images/GADesktop2.png"><img src="../Images/GADesktop2.png"></img></a>
 </div>
 
 <h5>Travellancer - Original Concept, Project Management, Branding, Team Developer</h5>
@@ -46,15 +47,22 @@
 </div>
 
 
-<h5>Digital Branding Institute - Content Writing and Social Media</h5>
+<h5>Digital Branding Institute - Content Writing and Social Media Intern</h5>
+<h5>Digital Branding Institute</h5>
 <h5>Wet Ink Press Co (Self-Published) - Founder, Independent Digital Branding</h5>
+<h5>Wet Ink Press Co - Interview with Javier Espinoza</h5>
 <h5>Resume, Updated As Of May 2018</h5>
 <div id="grid-3">
 
   <a href="https://digitalbrandinginstitute.com/protect-company-reputation/"><img src="../Images/DBI.png"></img></a>
 </div>
 
+  <a href="https://digitalbrandinginstitute.com/small-business-hashtags/"><img src="../Images/DBI2.png"></img></a>
+</div>
+
 <a href="https://medium.com/@Nadia_B_Carmon/how-to-develop-your-webdev-brand-4cfa5e5ed3a0"><img src="../Images/WIPCO1.png"></img></a>
+
+<a href="https://medium.com/@Nadia_B_Carmon/dystopia-now-an-interview-with-indie-filmmaker-javier-espinoza-3071cadfff1d"><img src="../Images/WIPCO2.png"></img></a>
 
 <a href="../Images/Resume.jpg"><img src="../Images/Resume.jpg"></img></a>
 </div>
