--- a/HTML/home.html
+++ b/HTML/home.html
@@ -54,11 +54,10 @@
 <h5>Resume, Updated As Of May 2018</h5>
 <div id="grid-3">
 
+  <div id="grid-3">
   <a href="https://digitalbrandinginstitute.com/protect-company-reputation/"><img src="../Images/DBI.png"></img></a>
-</div>
 
   <a href="https://digitalbrandinginstitute.com/small-business-hashtags/"><img src="../Images/DBI2.png"></img></a>
-</div>
 
 <a href="https://medium.com/@Nadia_B_Carmon/how-to-develop-your-webdev-brand-4cfa5e5ed3a0"><img src="../Images/WIPCO1.png"></img></a>
 
