Added interview with Jeremiah Kipp

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -51,6 +51,7 @@
 <h5>Digital Branding Institute</h5>
 <h5>Wet Ink Press Co (Self-Published) - Founder, Independent Digital Branding</h5>
 <h5>Wet Ink Press Co - Interview with Javier Espinoza</h5>
+<h5>Wet Ink Press Co - Interview with Jeremiah Kipp</h5>
 <h5>Resume, Updated As Of May 2018</h5>
 <div id="grid-3">
 
@@ -62,6 +63,8 @@
 <a href="https://medium.com/@Nadia_B_Carmon/how-to-develop-your-webdev-brand-4cfa5e5ed3a0"><img src="../Images/WIPCO1.png"></img></a>
 
 <a href="https://medium.com/@Nadia_B_Carmon/dystopia-now-an-interview-with-indie-filmmaker-javier-espinoza-3071cadfff1d"><img src="../Images/WIPCO2.png"></img></a>
+
+<a href="https://medium.com/@Nadia_B_Carmon/low-budget-high-art-an-interview-with-indie-filmmaker-jeremiah-kipp-bed80a44b67b"><img src="../Images/WIPCO3.png"></img></a>
 
 <a href="../Images/Resume.jpg"><img src="../Images/Resume.jpg"></img></a>
 </div>
