Changed color of navbar and added alink to Linkedin profile via icon

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -11,10 +11,11 @@
 <body>
 
 			<!-- Dropdown Structure -->
-<nav>
+<nav id="navbar">
   <div class="nav-wrapper">
     <ul class="right hide-on-med-and-down">
       <li><a href="mailto:nadiabcarmon@gmail.com">Contact Me</a></li>
+      <li><a href="https://www.linkedin.com/in/nadiacarmon/"><img src="../Images/Linkedin.png" id="linkedin"></a>
       <!-- Dropdown Trigger -->
     </ul>
   </div>
@@ -65,6 +66,8 @@
 <a href="https://medium.com/@Nadia_B_Carmon/dystopia-now-an-interview-with-indie-filmmaker-javier-espinoza-3071cadfff1d"><img src="../Images/WIPCO2.png"></img></a>
 
 <a href="https://medium.com/@Nadia_B_Carmon/low-budget-high-art-an-interview-with-indie-filmmaker-jeremiah-kipp-bed80a44b67b"><img src="../Images/WIPCO3.png"></img></a>
+
+<!-- <a href=""><img src=""></img></a> -->
 
 <a href="../Images/Resume.jpg"><img src="../Images/Resume.jpg"></img></a>
 </div>
