Added Referee final project, Blackjack21 and changed text formatting to better reflect skills and experience

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -23,40 +23,48 @@
 
 	<img src="../Images/Nadia Carmon.png" id="home-logo"></img>
 
-<h4>Projects</h4>
+<div id="allprojects">
+<h4 id="projects">Projects</h4>
 
-<h5>GrantAnswers - Web Development (Mobile/Desktop), Digital Ads and Social Content (In Progress)</h5>
+<h5 id="GAname">GrantAnswers</h5>
+<h5> -Web and Mobile Development, Digital Content Strategy- </h5>
 
 <div id="grantanswers">
-  <a href="../Images/GADesktop.png"><img src="../Images/GADesktop.png"></img></a>
+    <a href="../Images/GADesktop.png"><img src="../Images/GADesktop.png"></img></a>
    <a href="../Images/GAMobile.png"><img src="../Images/GAMobile.png"></img></a>
    <a href="../Images/GAad1Student.png"><img src="../Images/GAad1Student.png"></img></a>
    <a href="../Images/GADesktop2.png"><img src="../Images/GADesktop2.png"></img></a>
 </div>
 
-<h5>Travellancer - Original Concept, Project Management, Branding, Team Developer</h5>
+<h5 id="Originalname">Original App Concepts Realized Into Viable Products</h5>
+<h5>Referee: Business-Customer Reputation Management Via Social Media</h5>
+<h5>Travellancer: A Travel-Based Freelance Gig Finder</h5>
+<h5>Quoth: Lyric-Sharing Blog Platform</h5>
 
-<h5>School Admin Panel</h5>
-<h5>Bilingual Poetry Generator</h5>
-<h5>Quoth - Lyric-Sharing Blog Platform (In Development)</h5>
-
-<div id="grid-2">
+<div id="original">
+  <a href="../Images/Referee.png"><img src="../Images/Referee.png"></img></a>
   <a href="https://exuberantdragonflies.herokuapp.com/"><img src="../Images/Travellancer.png"></img></a>
-  <a href="https://sacredheartacademy-admin.herokuapp.com/"><img src="../Images/AdminPanel.png"></img></a>
-  <a href="https://nadiabcarmon.github.io/PoetryGen/Giacomo.html"><img src="../Images/PoetryGen.png"></img></a>
   <a href="https://quoth-it.herokuapp.com/"><img src="../Images/Quoth.png"></img></a>
 </div>
 
+<h5 id="Othername">Other</h5>
+<h5>School Admin Panel</h5>
+<h5>Medieval Italian-To-English Poetry Generator</h5>
+<h5>Blackjack 21</h5>
 
-<h5>Digital Branding Institute - Content Writing and Social Media Intern</h5>
-<h5>Digital Branding Institute</h5>
-<h5>Wet Ink Press Co (Self-Published) - Founder, Independent Digital Branding</h5>
-<h5>Wet Ink Press Co - Interview with Javier Espinoza</h5>
-<h5>Wet Ink Press Co - Interview with Jeremiah Kipp</h5>
-<h5>Resume, Updated As Of May 2018</h5>
-<div id="grid-3">
+<div id="other">
+  <a href="https://sacredheartacademy-admin.herokuapp.com/"><img src="../Images/AdminPanel.png"></img></a>
+  <a href="https://nadiabcarmon.github.io/PoetryGen/Giacomo.html"><img src="../Images/PoetryGen.png"></img></a>
+  <a href="https://nadiabcarmon.github.io/Blackjack21/BJ1.html"><img src="../Images/Blackjack21.png"></img></a>
+</div>
 
-  <div id="grid-3">
+<h5 id="Contentname">Content Writing</h5>
+<h5>2 Articles for Digital Branding Institute</h5>
+<h5>3 Self-Published Articles Via My Brand, Wet Ink Press Co</h5>
+<h5>1 Resume</h5>
+
+
+  <div id="content">
   <a href="https://digitalbrandinginstitute.com/protect-company-reputation/"><img src="../Images/DBI.png"></img></a>
 
   <a href="https://digitalbrandinginstitute.com/small-business-hashtags/"><img src="../Images/DBI2.png"></img></a>
@@ -71,6 +79,7 @@
 
 <a href="../Images/Resume.jpg"><img src="../Images/Resume.jpg"></img></a>
 </div>
+
 
 
 <!-- Compiled and minified JavaScript -->
