Added Github link via icon, changed GrantAnswers Desktop Image to a more recent one

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -15,7 +15,8 @@
   <div class="nav-wrapper">
     <ul class="right hide-on-med-and-down">
       <li><a href="mailto:nadiabcarmon@gmail.com">Contact Me</a></li>
-      <li><a href="https://www.linkedin.com/in/nadiacarmon/"><img src="../Images/Linkedin.png" id="linkedin"></a>
+      <li><a href="https://www.linkedin.com/in/nadiacarmon/"><img src="../Images/Linkedin.png" id="linkedin"></img></a>
+        <li><a href="https://github.com/NadiaBCarmon"><img src="../Images/Github.png" id="github"></img></a>
       <!-- Dropdown Trigger -->
     </ul>
   </div>
@@ -60,7 +61,7 @@
 
 <h5 id="Contentname">Content Writing</h5>
 <h5>2 Articles for Digital Branding Institute</h5>
-<h5>3 Self-Published Articles Via My Brand, Wet Ink Press Co</h5>
+<h5>3 Self-Published Articles My Venture, Wet Ink Press Co</h5>
 <h5>1 Resume</h5>
 
 
