Corrected <h5>3 Self-Published Articles Via My Venture, Wet Ink Press Co</h5>

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -61,7 +61,7 @@
 
 <h5 id="Contentname">Content Writing</h5>
 <h5>2 Articles for Digital Branding Institute</h5>
-<h5>3 Self-Published Articles My Venture, Wet Ink Press Co</h5>
+<h5>3 Self-Published Articles Via My Venture, Wet Ink Press Co</h5>
 <h5>1 Resume</h5>
 
 
